
MOAT test scripts
John Jacobsen jacobsen@npxdesigns.com
John Kelley jkelley@icecube.wisc.edu

V00-02-09 10/23/13
0006723: tcaltest: proc file name string is corrupt, test fails

============================================================================

V00-02-08 3/9/10
0003855: Rip out BFD cruft from tagmoat script
0003854: MOAT/stagedtests.pl vulnerable to false alarm if DOR clock ends in the hex digits "bad"
0002004: sudo make rpm fails

============================================================================


V00-02-07  11/13/07
 Issue    Fix/upgrade
0001738: comms tests (MOAT, QUADTOOL, DMT, DOMAPPTEST.py) all need to have the ability to run in the foreground

============================================================================

V00-02-06  9/27/06

 Issue    Fix/upgrade
0000741: add options to moat to make MJB test only upper or lower half of string
0000740: fix shortmoat and moat14 to accept CWD arguments (e.g., 'shortmoat 00a 01b')
0000745: get moat -k to kill mjb subprocesses correctly
0000744: allow for setting of mjb duration in moat

============================================================================

V00-02-05  3/31/06
Requires: domhub-tools 201 or greater
- Don't bail in se.pl if open fails on one of the /dev files

============================================================================

V00-02-04  2/5/06
Requires: domhub-tools 201 or greater
- Fix transition from configboot to iceboot in stagedtests.pl

============================================================================

V00-02-03  12/08/05
Requires: domhub-tools 201 or greater
- More debugging information provided for cold reboot tests

============================================================================

V00-02-02  12/07/05
Requires: domhub-tools 201 or greater
- Added optional power-cycling test to MOAT, a la "cold reboot" test at 
  FAT.  Use with care.

============================================================================

V00-02-00  11/29/05